@@ -1960,12 +1960,6 @@ Defaults to `/tmp`.
 
 The default value is `YES`.
 
-|S |NGImap4ConnectionStringSeparator
-|Parameter used to set the IMAP mailbox separator. Setting this will
-also have an impact on the mailbox separator used by Sieve filters.
-
-The default separator is `/`.
-
 |S |NGImap4AuthMechanism
 |Trigger the use of the IMAP `AUTHENTICATE` command with the specified
 SASL mechanism. Please note that feature might be limited at this time.
