@@ -75,6 +75,7 @@ typedef enum {
 
 /* capabilities */
 - (BOOL) hasCapability: (NSString *) capability;
+- (NSString *) imap4Separator;
 - (BOOL) supportsQuotas;
 - (BOOL) supportsQResync;
 
