@@ -12,6 +12,7 @@ Enhancements
  - [web] prohibit duplicate contact categories in Preferences module
  - [web] improve constrat of text in toolbar with input fields
  - [web] updated Angular Material to version 1.1.20
+ - [core] now dynamically detect and use the IMAP separator (#1490)
 
 Bug fixes
  - [web] properly handle Windows-1256 charaset (#4781)
